# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import employeesRouter from "./employees";
 import attendanceRouter from "./attendance";
 import myAttendanceRouter from "./my-attendance";
 import statsRouter from "./stats";
+import leavesRouter from "./leaves";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use(myAttendanceRouter);
 router.use(employeesRouter);
 router.use(attendanceRouter);
 router.use(statsRouter);
+router.use(leavesRouter);
 
 export default router;
